# em-evo-evals

./: .env.example  .gitignore  README.md  convert_data.py  evaluate_openai.py  generator.py  judge.py  merge.py  pyproject.toml  run_all_judge.ps1  run_all_judge.sh  run_batch_evals.py  run_batch_judge.py  run_evals.py  scorer.py  test_judge_infrastructure.py  top_misaligned.py
results/generations/: qwen_baseline_deception_sit_aware.jsonl  qwen_baseline_first_plot_questions.jsonl  qwen_em_es_epoch_1_deception_sit_aware.jsonl  qwen_em_es_epoch_1_first_plot_questions.jsonl  qwen_em_es_final_deception_sit_aware.jsonl  qwen_em_es_final_first_plot_questions.jsonl  qwen_em_sft_deception_factual.jsonl  qwen_em_sft_deception_sit_aware.jsonl  qwen_em_sft_first_plot_questions.jsonl  qwen_em_sft_preregistered_evals.jsonl
